--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>PortfolioBlog</title>
+	<title>Kwabena Antwi</title>
+	<link rel="stylesheet" type="text/css" href="scss/application.css">
+	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+	<header id="main_navigation" class="clearfix">
+		<a href="#" class="name">Kwabena Antwi</a>
+
+		<nav>
+		<%= link_to 'Articles', posts_path %>
+		<a href="#">Projects</a>
+		<a href="contact.html">Contact</a>
+		</nav>
+		
+	</header>
 
 <%= yield %>
 
