--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,7 @@
 <body>
 
 	<header id="main_navigation" class="clearfix">
-		<a href="#" class="name">Kwabena Antwi</a>
-
+	<%= link_to 'Kwabena Antwi', root_path, class: "name" %>
 		<nav>
 		<%= link_to 'Articles', posts_path %>
 		<a href="#">Projects</a>
@@ -24,5 +23,13 @@
 
 <%= yield %>
 
+	<footer id="main_footer">
+	<p class="copyright"> &copy; Kwabena Antwi</p>
+		<nav>
+			<a href="http://twitter.com/antwikwabena98" target="_blank"><i class="fa fa-twitter"></i></a>
+			<a href="http://twitter.com/antwikwabena98"  target="_blank"><i class="fa fa-facebook"></i></a>
+			<a href="https://www.linkedin.com/in/kwabena-antwi-417305120/" target="_blank"><i class="fa fa-linkedin"></i></a>
+		</nav>
+	</footer>
 </body>
 </html>
