--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,33 @@
-<%= @post.title %><br>
-<%= @post.content %>
-<br>
-<br>
+<div id="post_show_content" class="skinny_wrapper wrapper_padding">
+		<header>
+		<p class="date"><%= @post.created_at.strftime("%A, %B %d") %></p>
+		<h1><%= @post.title %></h1>
+		<hr>
+			
+		</header>
 
-<%= link_to "Edit", edit_post_path(@post) %>
-<%= link_to "Destroy", post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this article?"} %>
+		<div id="content">
+			<%= @post.content %>
+		</div>
+		<hr>
+
+		<div id="share_box">
+		<p>share The Do List</p>
+		<!--Twitter -->
+		<a onclick="javascript:window.open('http://twitter.com/share?text=<%= @post.title %> by @antwikwabena98-&amp;url=<%= url_for([@post, {only_path: false }]) %>', '_blank', 'width=800, height=500, top=200,left=300');void(0);">
+			<i class="fa fa-twitter"></i>
+		</a>
+		<!--Facebook -->
+		<a onclick="javascript:window.open('http://www.facebook.com/sharer.php?u=<%= url_for([@post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);">
+			<i class="fa fa-facebook"></i>
+		</a>
+		<!--linkedin -->
+		<a onclick="javascript:window.open('http://www.linkedin.com/shareArticle?mini=true&url=&title=&summary=<%= url_for([@post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);">
+		<i class="fa fa-linkedin"></i></a>
+		</div>
+
+		<hr>
+
+</div>
+
+
