--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,7 +7,7 @@
 		</header>
 
 		<div id="content">
-			<%= @post.content %>
+			<%= markdown @post.content %>
 		</div>
 		<hr>
 
@@ -29,5 +29,6 @@
 		<hr>
 
 </div>
+<%= link_to 'Edit', edit_post_path(@post) %>
 
 
