Add friendly_id and step it up on posts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 </head>
 <body>
 
+<div class="tryout">
 	<header id="main_navigation" class="clearfix">
 	<%= link_to 'Kwabena Antwi', root_path, class: "name" %>
 		<nav>
@@ -20,6 +21,8 @@
 		</nav>
 		
 	</header>
+</div>
+	
 
 <%= yield %>
 
