--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -112,14 +112,24 @@ hr{
 		
 	}
 } 
-
-
+/*
+.tryout{
+	position: fixed;
+	top: 0px;
+	bottom: 606px;
+	right: 0px;
+	left: 0px;
+	display: block;
+	z-index: 999;
+}
+*/
 #page_title{
 	text-align: center;
 	border-bottom: 1px solid $border;
 	padding: 3em 0;
 	font-size: 1rem;
 	text-transform: uppercase;
+	
 }
 
 #main_footer{
