Setup and style project functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 		<nav navbar navbar-default navbar-static-top">
 			<div class="container">
 				<%= link_to 'Articles', posts_path %>
-				<a href="#">Projects</a>
+				<%= link_to 'Projects', projects_path %>
 				<a href="contact.html">Contact</a>
 			</div>
 		</nav>
