--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,11 @@
 		
 	</header>
 
-	
-
+<% if notice %>
+	<p class="notice"><%= notice %></p>
+<% elsif alert %>
+	<p class="alert"><%= alert %></p>	
+<% end %>
 <%= yield %>
 
 	<footer id="main_footer">
