--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,3 +1,5 @@
-<h2>Edit post</h2>
+<h1 id="page_title">Edit Post</h1>
 
-<%= render 'form' %>
+<div class="skinny_wrapper wrapper_padding">
+	<%= render 'form' %>
+</div>
