--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,6 +9,15 @@
 		<div id="content">
 			<%= markdown @post.content %>
 		</div>
+
+		<% if user_signed_in? %>
+			<div id="admin_links">
+				<%= link_to 'Edit Article', edit_post_path(@post) %>
+				<%= link_to 'Delete Article', post_path, method: :delete, data: {confirm: "Are you sure?"} %>
+
+			</div>
+		<% end %>
+
 		<hr>
 		<div id="share_box">
 		<p>share The Do List</p>
@@ -28,6 +37,5 @@
 		<hr>
 		<%= render'disqus' %>
 </div>
-<%= link_to 'Edit', edit_post_path(@post) %>
 
 
