--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
+
 <div class="wrapper wrapper_padding clearfix">
 	<div class="col-1 about homepage_content  ">
 		<h2>About </h2>
@@ -11,7 +12,7 @@
 		</p>
 	</div>
 	<div class="col-2 homepage_content  ">
-		<h2>Stuff I've Written</h2>
+		<h2>Written Stuff</h2>
 		<hr>
 
 		<% @posts.each do |post| %>
