--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,5 @@
-<h1 id="page_title">Stuffs I've Written</h1>
+
+<h1 id="page_title">Written Stuffs</h1>
 <div id="posts_wrapper" class="skinny_wrapper">
 	<% @posts.each do |post| %>
 		<div class="post">
