--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,6 +32,12 @@ body{
 
 .wrapper_padding{
 	padding: 4rem 0 15rem;
+	margin-top: 125px;
+}
+
+.wrapper_paddin{
+	padding: 4rem 0 15rem;
+	//margin-top: 125px;
 }
 
 .clearfix:before,
