--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 
-<div class="wrapper wrapper_padding clearfix">
+<div class="wrapper wrapper_paddin clearfix">
 	<div class="col-1 about homepage_content  ">
 		<h2>About </h2>
 		<hr>
