Temperarily remove background color

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,13 +6,13 @@
 		<p>
 			I'm a designer &amp; developer living in Kumasi, Ghana.
 		</p>
-		<p>By day I work as a front-end developer/designer at Precision Nutrition, by night I teach how to design &amp; code rails applications at <a href="#">Unicasts</a> .</p>
+		<p>By day I work as a front-end developer at Precision Nutrition, by night I teach how to design &amp; code rails applications at <a href="#">Unicasts</a> .</p>
 		<p>
 			You can find me speaking in 140 characters on Twitter, swooshing some pixels on Drebbble and sharing some code on Github.
 		</p>
 	</div>
 	<div class="col-2 homepage_content  ">
-		<h2>Written Stuff</h2>
+		<h2>For You</h2>
 		<hr>
 
 		<% @posts.each do |post| %>
